<resources>
    <string name="app_name">IDOLiSH7</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_title_1">IZUMI IORI</string>
    <string name="nav_title_2">NIKAIDO YAMATO</string>
    <string name="nav_title_3">IZUMI MITSUKI</string>
    <string name="nav_title_4">YOTSUBA TAMAKI</string>
    <string name="nav_title_5">OSAKA SOGO</string>
    <string name="nav_title_6">ROKUYA NAGI</string>
    <string name="nav_title_7">NANASE RIKU</string>
</resources>
