<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/icon_all"
            android:title="@string/app_name"
            android:tooltipText="chose one member"
            android:checked="true"/>
        <item
            android:id="@+id/nav_one"
            android:icon="@drawable/icon_1"
            android:title="@string/nav_title_1"/>
        <item
            android:id="@+id/nav_two"
            android:icon="@drawable/icon_2"
            android:title="@string/nav_title_2"/>
        <item
            android:id="@+id/nav_three"
            android:icon="@drawable/icon_3"
            android:title="@string/nav_title_3"/>
        <item
            android:id="@+id/nav_four"
            android:icon="@drawable/icon_4"
            android:title="@string/nav_title_4"/>
        <item
            android:id="@+id/nav_five"
            android:icon="@drawable/icon_5"
            android:title="@string/nav_title_5"/>
        <item
            android:id="@+id/nav_six"
            android:icon="@drawable/icon_6"
            android:title="@string/nav_title_6"/>
        <item
            android:id="@+id/nav_seven"
            android:icon="@drawable/icon_7"
            android:title="@string/nav_title_7"/>
    </group>
</menu>
